<resources>
    <string name="app_name">COMP3025-W2024-Week10</string>
        <string name="title_text">Title</string>
        <string name="studio_text">studio</string>
        <string name="add_dialog_title">Add a new Movie</string>
        <string name="update_dialog_title">Update a Movie</string>
        <string name="add_movie">Add Movie</string>
        <string name="update_movie">Update Movie</string>
        <string name="delete_movie">Delete Movie</string>
        <string name="cancel">Cancel</string>
        <string name="ok">OK</string>
        <string name="title_prompt">Movie Title</string>
        <string name="subtitle_prompt">Studio Name</string>
        <string name="are_you_sure">Are you sure?</string>
        <string name="login_label">Login</string>
        <string name="username">username</string>
        <string name="password">password</string>
        <string name="login">Login</string>
        <string name="no_account">No Account?</string>
        <string name="register_here">Register Here</string>
        <string name="user_registration">User Registration</string>
        <string name="enter_email">Enter email</string>
        <string name="enter_first_name">Enter first name</string>
        <string name="enter_last_name">Enter last name</string>
        <string name="enter_username">Enter username</string>
        <string name="confirm_password">Confirm password</string>
        <string name="register">Register</string>
        <string name="title_activity_login">LoginActivity</string>
        <string name="prompt_email">Email</string>
        <string name="prompt_password">Password</string>
        <string name="action_sign_in">Sign in or register</string>
        <string name="action_sign_in_short">Sign in</string>
        <string name="welcome">"Welcome !"</string>
        <string name="invalid_username">Not a valid username</string>
        <string name="invalid_password">Password must be >5 characters</string>
        <string name="login_failed">"Login failed"</string>
        <string name="add_a_movie">Add a Movie</string>
        <string name="logout">Logout</string>
        <string name="movies">Movies!</string>
    </resources>